# rag-langchain-chromadb

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  rag.py  rag_config.json  test_rag.ipynb
app/: main.py
example/: test_rag.ipynb
serve/: main.py
src/: rag.py  utils.py
