[tool.poetry]
name = "rag-langchain-chromadb"
version = "0.1.0"
description = ""
authors = ["Joseph <j16065682@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.349"
chromadb = "0.4.18"
simsimd = "^3.6.0"
langserve = "^0.0.35"
uvicorn = "^0.24.0.post1"
pysqlite3-binary = "^0.5.2.post2"
sse-starlette = "^1.8.2"
fastapi = "0.104"
pandas = "^2.1.4"
transformers = "4.35.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
